refactor: User activation
